syntax = "proto3";

import "google/protobuf/timestamp.proto";

package pb;

option go_package = "./pb";

message FileInfo {
    string name = 1;
    google.protobuf.Timestamp createdAt = 2;
    google.protobuf.Timestamp updatedAt = 3;
}

message SaveFileRequest {
    bytes file = 1;
}

message SaveFileResponse{}

message ListFilesRequest{
    int32 offset = 1;
    int32 limit = 2;
}

message ListFilesResponse{
    repeated FileInfo files = 1;
}


service FileService {
  rpc SaveFile(SaveFileRequest) returns (SaveFileResponse);
  rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);
}